--- a/views/restricted/Admin.ejs
+++ b/views/restricted/Admin.ejs
@@ -3,11 +3,11 @@
 <div class="container container-single">
     <div class="single-wrapper admin-panel">
         <div class="row justify-content-center">
-            <a class="admin-section-block col-md-3" href="/Admin/Orders">Orders</a>
-            <a class="admin-section-block col-md-3" href="/Admin/Galerie/Post">Galerie</a class="admin-section-block col-3">
-            <a class="admin-section-block col-md-3" href="/Admin/Shop/Post">Shop</a class="admin-section-block col-3">
-            <a class="admin-section-block col-md-3" href="/Admin/Blog/Post">Blog</a class="admin-section-block col-3">
-            <a class="admin-section-block col-md-3" href="/Admin/Front">Home</a class="admin-section-block col-3">
+            <a class="admin-section-block col-lg-3" href="/Admin/Orders">Orders</a>
+            <a class="admin-section-block col-lg-3" href="/Admin/Galerie/Post">Galerie</a class="admin-section-block col-3">
+            <a class="admin-section-block col-lg-3" href="/Admin/Shop/Post">Shop</a class="admin-section-block col-3">
+            <a class="admin-section-block col-lg-3" href="/Admin/Blog/Post">Blog</a class="admin-section-block col-3">
+            <a class="admin-section-block col-lg-3" href="/Admin/Front">Home</a class="admin-section-block col-3">
         </div>
     </div>
 </div>
