2/3rd of responsiveness progress done, left few pages

--- a/views/About.ejs
+++ b/views/About.ejs
@@ -7,16 +7,19 @@
 		<div class="menu col-3">
 			<ul>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'blog')" class="menu-link active disabled"><i class="fas fa-scroll mr-2"></i> Blog <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" onclick="openTab(event, this, 'blog')" class="menu-link active disabled">
+						<i class="fas fa-scroll mr-2"></i> <span>Blog</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'bio')" class="menu-link"><i class="fas fa-address-card mr-2"></i> Bio <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" onclick="openTab(event, this, 'bio')" class="menu-link">
+						<i class="fas fa-address-card mr-2"></i> <span>Bio</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'contact')" class="menu-link"><i class="fas fa-envelope mr-2"></i> Contact <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" onclick="openTab(event, this, 'contact')" class="menu-link">
+						<i class="fas fa-envelope mr-2"></i> <span>Contact</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
-					<a href="/CGU" class="menu-link"><i class="fa fa-gavel mr-2"></i> Legal <i class="fas fa-chevron-right chev"></i></a>
+					<a href="/CGU" class="menu-link"><i class="fa fa-gavel mr-2"></i> <span>Legal</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 			</ul>
 
