--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -7,8 +7,8 @@
 		Simply go to the <a target="_blank" href="/Galerie"><b>Gallery</b></a
 		>, click the <b>"See More" button</b> for the painting you're interested in, and down below you can chose what options you'd like
 	</div>
-	<div class="container-single container-catalog col-12">
-		<div class="catalog-wrapper col-10 offset-1">
+	<div class="container-single container-catalog col-md-12">
+		<div class="catalog-wrapper col-md-10 offset-md-1">
 			<div class="text-center mb-4 pt-4">
 				<button class="tab-btn active" onclick="openTab(this, 'framed')">Framed Painting</button>
 				<button class="tab-btn" onclick="openTab(this, 'fap')">Fine Art Print</button>
@@ -16,7 +16,7 @@
 			</div>
 		</div>
 
-		<div class="catalog-category tab col-10 offset-1" id="framed">
+		<div class="catalog-category tab col-md-10 offset-md-1" id="framed">
 			<div class="row pb-0">
 				<div class="col-6">
 					<h1 class="catalog-title-category">Framed prints</h1>
@@ -719,7 +719,7 @@
 			</div>
 		</div>
 
-		<div class="catalog-category tab col-10 offset-1" id="fap" style="display: none;">
+		<div class="catalog-category tab col-md-10 offset-md-1" id="fap" style="display: none;">
 			<h1 class="catalog-title-category">Fine Art Prints</h1>
 
 			<h4>A complete range of specialist art papers.</h4>
@@ -761,7 +761,7 @@
 			</div>
 		</div>
 
-		<div class="catalog-category tab col-10 offset-1" id="canvas" style="display: none;">
+		<div class="catalog-category tab col-md-10 offset-md-1" id="canvas" style="display: none;">
 			<h1 class="catalog-title-category">Canvas</h1>
 			<h4>Handmade by canvas craftsmen</h4>
 			<div class="row">
