--- a/views/User.ejs
+++ b/views/User.ejs
@@ -5,16 +5,19 @@
 		<div class="menu col-3">
 			<ul>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'parameters')" class="menu-link"><i class="fas fa-cog mr-2"></i> Parameters <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" onclick="openTab(event, this, 'parameters')" class="menu-link">
+						<i class="fas fa-cog mr-2"></i> <span>Parameters</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 					<li>
-					<a href="#" onclick="openTab(event, this, 'delivery')" class="menu-link active disabled"><i class="fas fa-truck mr-2"></i> Delivery Informations <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" onclick="openTab(event, this, 'delivery')" class="menu-link active disabled">
+						<i class="fas fa-truck mr-2"></i> <span>Delivery Informations</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'purchases')" class="menu-link"><i class="fa fa-clock-o mr-2"></i> History <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" onclick="openTab(event, this, 'purchases')" class="menu-link">
+						<i class="fa fa-clock-o mr-2"></i> <span>History</span> <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
-					<a href="/shopping-cart"><i class="fas fa-shopping-cart mr-2"></i> Cart</a>
+					<a href="/shopping-cart"><i class="fas fa-shopping-cart mr-2"></i> <span>Cart</span></a>
 				</li>
 			</ul>
 		</div>
