--- a/views/cgu.ejs
+++ b/views/cgu.ejs
@@ -2,7 +2,7 @@
 
 <div id="CGU" class="container container-single">
 	<div class="single-wrapper">
-		<div class="col-10 offset-1 content-wrapper p-5">
+		<div class="col-md-10 offset-md-1 content-wrapper p-5">
 			<h1 class="single-title text-center" id="tos">MENTIONS LEGALES</h1>
 
 			<p style="text-align: justify;">
