--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,10 @@
 	--light-shade-p1: #d6d6d6;
 }
 
+#agree_tos {
+	width: unset;
+}
+
 #editor {
 	min-height: 300px;
 	background-color: #e6e6e6;
@@ -332,15 +336,15 @@ header:hover .navbar-container .navbar-custom .nav-links li a {
 }
 
 #cartQty {
-	margin-left: -15px;
 	font-weight: bold;
 	color: var(--light-shade);
 	background-color: var(--brand-blue-p2);
-	padding: 2px 9px;
+	padding: 5px 9px;
 	border-radius: 50%;
 	-webkit-box-shadow: 0px 0px 5px 0 rgba(86, 86, 86, 0.75);
 	-moz-box-shadow: 0px 0px 5px 0 rgba(86, 86, 86, 0.75);
 	box-shadow: 0px 0px 5px 0 rgba(86, 86, 86, 0.75);
+	vertical-align: super;
 }
 
 .hamburger div {
@@ -564,6 +568,7 @@ footer {
 	font-size: 20em;
 	color: var(--light-shade-m1);
 	text-shadow: 8px 8px var(--brand-blue-p1);
+	margin-bottom: 50px;
 }
 .wrapper-404 h5 {
 	font-family: "Montserrat", sans-serif;
@@ -771,10 +776,12 @@ button:focus {
 }
 
 #resetpw {
-	height: 75%;
+	width: 100%;
 	box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
 	-webkit-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
 	-moz-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
+	padding: 50px 20px;
+	margin: 20px;
 }
 /* END ACCOUNT */
 
@@ -842,6 +849,11 @@ button:focus {
 	-moz-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
 	padding: 2px;
 	background: var(--brand-blue-m1);
+	margin: 20px;
+}
+
+.content-wrapper .carousel-container {
+	margin: -20px;
 }
 
 .carousel-indicators {
@@ -892,6 +904,10 @@ div.carousel-item.active {
 /* END HOME */
 
 /* BLOG */
+#content-holder img {
+	max-width: 100%;
+}
+
 .blog-form {
 	max-width: 800px;
 	transform: translate(-50%, 0%);
@@ -1236,6 +1252,7 @@ div.carousel-item.active {
 .menu {
 	background-color: var(--brand-blue-p2);
 	border-radius: 10px 0 0 10px;
+	z-index: 5;
 }
 
 .menu li {
@@ -1652,11 +1669,13 @@ select:-webkit-autofill {
 }
 .cart-price {
 	width: 25%;
+	min-width: 140px;
 	font-size: 1.2em;
 }
 
 .cart-quantity {
 	width: 15%;
+	min-width: 125px;
 }
 .cart-img {
 	width: 150px;
@@ -1708,7 +1727,12 @@ select:-webkit-autofill {
 }
 .cart-item-qty {
 	width: 100%;
+	min-width: 55px;
 	color: var(--light-shade);
+}
+
+input.cart-item-qty {
+	color: var(--brand-blue);
 }
 
 .recap-box {
@@ -1929,7 +1953,6 @@ tbody tr:hover {
 /* The container must be positioned relative: */
 .select-wrapper {
 	position: relative;
-	min-width: 200px;
 	width: 100%;
 }
 
@@ -2054,14 +2077,12 @@ tbody tr:hover {
 	margin-right: auto;
 	margin-left: auto;
 	background-color: var(--brand-blue-p1);
-	padding: 10px 30px;
 }
 
 .container-shop {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
+	grid-template-columns: repeat(2, minmax(425px, 1fr));
 	background-color: var(--light-shade-m1);
-	padding: 0 20px;
 }
 
 .card {
@@ -2280,9 +2301,8 @@ tbody tr:hover {
 	box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
 	-webkit-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
 	-moz-box-shadow: 0px 0px 20px 0 rgba(0, 0, 0, 0.85) !important;
-	margin-top: 10%;
-	margin-bottom: 10%;
 	padding: 50px 50px 50px 50px;
+	margin: 20px;
 }
 
 #card-element,
@@ -2316,7 +2336,7 @@ tbody tr:hover {
 
 .payment-price {
 	text-align: center;
-	margin-bottom: 25px;
+	margin: auto;
 }
 
 .card-error {
@@ -2332,10 +2352,67 @@ tbody tr:hover {
 /* bootstrap uses min-width and starts from xs */
 
 /* Small devices (landscape phones, 576px and up) */
-@media (max-width: 576px) {
+@media (max-width: 600px) {
+	#lostpw-container,
+	#login {
+		margin-left: -10px;
+	}
+}
+@media (max-width: 768px) {
+	.content-wrapper .carousel-container {
+		margin: 20px;
+	}
+	.content-wrapper .thumbnail-wrapper {
+		margin-top: 0.33em !important;
+	}
+}
+@media (max-width: 1200px) {
+	.container-with-menu {
+		border-radius: 0;
+	}
+	.menu li span,
+	.menu li .fa-chevron-right {
+		display: none;
+	}
+	.menu {
+		min-width: 50px;
+		padding: 0;
+		max-width: 8.333333%;
+		border-radius: 0;
+		margin-bottom: -1px;
+	}
+	.menu ul {
+		text-align: center;
+	}
 }
 /* Medium devices (tablets, 768px and up) */
 @media (max-width: 992px) {
+	.form-slider,
+	.overlay-panel {
+		padding: 0 10px;
+	}
+	#lostpw-container,
+	#login {
+		padding: 0;
+		max-width: 91.666667%;
+	}
+	#lostpw-container .wrapper {
+		box-shadow: none;
+		-webkit-box-shadow: none;
+		-moz-box-shadow: none;
+	}
+	.container-with-menu {
+		background-color: #f8f8f8;
+	}
+	.pwinty-wrapper {
+		grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+	}
+	.container-shop {
+		grid-template-columns: repeat(auto-fit, minmax(425px, 1fr));
+	}
+	#cart-qty-li {
+		margin-left: -2px;
+	}
 	.cart-row-item {
 		padding: 2px;
 	}
@@ -2374,6 +2451,7 @@ tbody tr:hover {
 	header {
 		background-color: var(--light-shade-m1);
 		margin-bottom: 1em;
+		padding: 5px 5%;
 	}
 	.container {
 		margin-top: 0;
@@ -2465,16 +2543,8 @@ tbody tr:hover {
 	.logo.fading {
 		opacity: 1;
 	}
-
 	.container {
 		padding: 0px;
-	}
-	.carousel-indicators li {
-		max-height: 40px !important;
-	}
-
-	.carousel-indicators li img {
-		height: 40px !important;
 	}
 	.form-container {
 		padding: 10px !important;
