--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -4,14 +4,14 @@
 <div class="container container-single">
 	<div class="single-wrapper">
 		<% if (locals.totalPrice == "0" || locals.totalPrice == "0.00" ) { %>
-		<div class="col-10 offset-1 wrapper">
+		<div class="col-md-10 offset-md-1 wrapper">
 			<div class="text-center">
 				<b class="alertEmpty text-center" id="alertEmpty">Your cart is empty!</b>
 			</div>
 		</div>
 
 		<% } %> <% if(locals.products && locals.totalPrice != 0 && locals.totalQty != 0){ %> 
-		<div class="col-10 offset-1 p-0">
+		<div class="col-md-10 offset-md-1 p-0">
 			<div class="cart-row" id="cart-row-header">
 				<span class="cart-item cart-header cart-column">ITEM</span>
 				<span class="cart-quantity cart-header cart-column">QUANTITY</span>
@@ -62,7 +62,7 @@
 			<% }) %></div> <% } %>
 
 
-			<div class="col-10 offset-1 wrapper" style="z-index: 0;">
+			<div class="col-md-10 offset-md-1 wrapper" style="z-index: 0;">
 				<h1 class="single-title text-center">Delivery Informations</h1>
 				<div class="alert alert-info alert-static w-100 mb-3" role="alert">
 									Make sure these informations are correct, if not, change them <a href="/User">HERE</a>
@@ -94,6 +94,8 @@
 					</div>
 				</div>
 
+				<div class="row">
+					<div class="col-md-12">
 				<label class="control-label">Address</label>
 				<input
 					id="autocomplete"
@@ -103,6 +105,8 @@
 					value="<% if (locals.delivery.full_address) { %><%= locals.delivery.full_address %><% } %>"
 					required
 				/>
+					</div>
+				</div>
 
 				<div id="address">
 					<div class="row">
@@ -132,6 +136,8 @@
 						</div>
 					</div>
 				</div>
+				<div class="row">
+					<div class="col-md-12">
 					<label class="control-label">Additional informations</label>
 				<input
 					id="instructions"
@@ -140,9 +146,11 @@
 					value="<% if (locals.delivery.instructions) { %><%= locals.delivery.instructions %><% } %>"
 					readonly
 				/>
+				</div>
+				</div>
 
 				<% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
-				<div class="col-md-6 offset-3 mt-4">
+				<div class="col-md-6 offset-md-3 mt-4">
 					<div class="payment-div p-3 text-center">
 						<% if (locals.deliveryPrice && locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
 						<span id="delivery-price-span">Shipping Price - <b id="delivery-price"> <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b></span>
