--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -2,9 +2,9 @@
 
 <script src="/scripts/cart.js"></script>
 <div class="container container-single">
-	<div class="single-wrapper">
+	<div class="single-wrapper mt-3">
 		<% if (locals.shop){ %>
-		<div class="col-10 offset-1 content-wrapper" id="<%= locals.shop._id %>">
+		<div class="col-md-10 offset-md-1 content-wrapper" id="<%= locals.shop._id %>">
 			<div class="carousel-container">
 				<div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
 					<div class="carousel-inner" role="listbox">
@@ -27,7 +27,7 @@
 					<!--/.Controls-->
 				</div>
 			</div>
-			<div class="thumbnail-wrapper mb-2 mt-3">
+			<div class="thumbnail-wrapper mb-2 mt-5">
 				<ol class="carousel-indicators no-thumb">
 					<% if (locals.img) { %> <% locals.img.forEach(function (item, index) { %>
 					<li data-target="#carousel-thumb" data-slide-to="<%= index %>" class="<% if(index == 0) { %>active<% } %>">
@@ -37,8 +37,8 @@
 				</ol>
 			</div>
 
-			<div class="blog-content col-10 offset-1 mt-3 pt-4">
-				<h3 class="single-title col-12 mb-0">
+			<div class="blog-content col-md-10 offset-md-1 mt-3 pt-4">
+				<h3 class="single-title col-md-12 mb-0">
 					<%= locals.shop.title %> <% if (locals.user && locals.user.role === "admin") { %>
 					<a href="/Admin/Shop/Patch/<%= locals.shop._id %>"><i class="fas fa-edit"></i></a>
 					<% } %>
@@ -48,7 +48,7 @@
 				</p>
 			</div>
 
-			<div class="col-4 offset-4 text-center mt-2">
+			<div class="col-md-4 offset-md-4 text-center mt-2">
 				<b class="card-price"><%= locals.shop.price %>€</b>
 				<b class="isUnique">Unique Painting</b>
 				<input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.shop._id %>', this)" /><!--disabled -->
