--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -2,7 +2,7 @@
 
 <div class="container-with-menu container">
 	<div class="row row-height">
-		<div class="menu col-xl-3 col-sm-1">
+		<div class="menu menu-login col-xl-3 col-md-2">
 			<ul>
 				<li>
 					<a href="#" onclick="openTab(event, this, 'login')" class="menu-link active disabled">
@@ -19,7 +19,7 @@
 			</ul>
 		</div>
 
-		<div id="login" class="tab col-xl-9 col-sm-11 row">
+		<div id="login" class="tab col-xl-9 col-md-10 row">
 			<div class="container p-0 m-0 h-100" id="container">
 				<div class="form-slider-container sign-up-container">
 					<form class="form-slider" id="register" onsubmit="submitRegister(event)" method="POST" action="/api/auth/register">
@@ -80,7 +80,7 @@
 			</div>
 		</div>
 
-		<div id="lostpw-container" class="tab col-xl-9 col-sm-11" style="display: none;">
+		<div id="lostpw-container" class="tab col-xl-9 col-md-10" style="display: none;">
 			<div class="container p-0 m-0 h-100">
 				<div class="col-md-10 offset-md-1 wrapper lostpw-container">
 					<div class="box-lostpw">
